--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -14,18 +14,19 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="56dp"/>
+            android:layout_height="?attr/actionBarSize"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="8dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/userImage"
                 android:layout_width="56dp"
                 android:layout_height="56dp"
-                android:layout_marginBottom="16dp"
+                android:layout_gravity="center_vertical"
                 android:layout_marginStart="24dp"
                 tools:src="@drawable/ic_user_placeholder"/>
 
