--- a/app/src/main/res/layout/list_item_repository.xml
+++ b/app/src/main/res/layout/list_item_repository.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
                 android:id="@+id/root"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -16,10 +17,19 @@
         android:layout_alignParentStart="true"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        tools:text="Repository name"/>
 
     <TextView
-        android:id="@+id/size"
+        android:id="@+id/repositoryId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_toEndOf="@+id/name"
+        tools:text="4"/>
+
+    <TextView
+        android:id="@+id/description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -27,11 +37,12 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="4dp"/>
+        android:layout_marginTop="4dp"
+        tools:text="Description"/>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="0.1dp"
-        android:layout_below="@+id/size"
+        android:layout_below="@+id/description"
         android:background="#757575"/>
 </RelativeLayout>
