--- a/app/src/main/res/layout/navigation_view_header.xml
+++ b/app/src/main/res/layout/navigation_view_header.xml
@@ -9,7 +9,7 @@
         android:id="@+id/headerImage"
         android:layout_width="match_parent"
         android:layout_height="172dp"
-        android:src="@drawable/github_logo"/>
+        android:scaleType="centerCrop"/>
 
     <TextView
         android:id="@+id/username"
