repository detail info

--- a/app/src/main/res/layout/list_item_repository.xml
+++ b/app/src/main/res/layout/list_item_repository.xml
@@ -15,18 +15,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
         android:textSize="16sp"
         tools:text="Repository name"/>
-
-    <TextView
-        android:id="@+id/repositoryId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_toEndOf="@+id/name"
-        tools:text="4"/>
 
     <TextView
         android:id="@+id/description"
@@ -37,12 +30,74 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="4dp"
         tools:text="Description"/>
+
+    <LinearLayout
+        android:id="@+id/detailLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/description"
+        android:orientation="horizontal"
+        android:paddingBottom="8dp"
+        android:paddingEnd="16dp"
+        android:paddingStart="16dp">
+
+        <ImageView
+            android:id="@+id/languageImage"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_language_write"/>
+
+        <TextView
+            android:id="@+id/languageText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="4dp"
+            android:textSize="16sp"
+            tools:text="Java"/>
+
+        <ImageView
+            android:id="@+id/forkImage"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="8dp"
+            android:src="@drawable/ic_fork"/>
+
+        <TextView
+            android:id="@+id/forkText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="4dp"
+            android:textSize="16sp"
+            tools:text="5"/>
+
+        <ImageView
+            android:id="@+id/stargazersImage"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="8dp"
+            android:src="@drawable/ic_star"/>
+
+        <TextView
+            android:id="@+id/stargazersText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="4dp"
+            android:textSize="16sp"
+            tools:text="2341"/>
+
+
+    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="0.1dp"
-        android:layout_below="@+id/description"
+        android:layout_below="@+id/detailLayout"
         android:background="#757575"/>
 </RelativeLayout>
