--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:headerLayout="@layout/navigation_view_header"/>
+        app:headerLayout="@layout/navigation_view_header"
+        app:menu="@menu/navigation_view_menu"/>
 </android.support.v4.widget.DrawerLayout>
 
